haproxy reititystä frondendiiin

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -8,8 +8,9 @@ defaults
   timeout client 50000ms
   timeout server 50000ms
 
-listen google
-  bind *:80
-
-  server google1 62.78.98.222:80
-  server google2 62.78.98.241:80
+frontend http-in
+    bind *:80
+    default_backend website
+    
+backend website
+    server server1 frontend
