haproxy ohjaus logstashiin

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -10,7 +10,12 @@ defaults
 
 frontend http-in
     bind *:80
+    acl interface_uri path_beg /interface
+    use_backend logstash_app if interface_uri
     default_backend website
     
 backend website
-    server server1 frontend
+    server front frontend
+    
+backend logstash_app
+    server logstash logstash:2000
