--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -6,5 +6,9 @@ input {
 }
 
 output {
-  stdout { codec => rubydebug }
+    mongodb {
+        collection => "orders"
+        database => "ordersDB"
+         uri => "mongodb://mongo.tty-training:27017"
+    }
 }
