Logstash lisätty mutate filter
nimeää message kentän nameksi ja lisää ordered kentän

--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -5,6 +5,13 @@ input {
   }
 }
 
+filter {
+    mutate {
+        add_field => { "ordered" => 1 }
+        rename => { "message" => "name" }
+    }
+}
+
 output {
     mongodb {
         collection => "orders"
