haproxy ohjaus mongodb:hen

--- a/haproxy/haproxy.cfg
+++ b/haproxy/haproxy.cfg
@@ -12,6 +12,8 @@ frontend http-in
     bind *:80
     acl interface_uri path_beg /interface
     use_backend logstash_app if interface_uri
+    acl mongo_uri path_beg /ordersDB
+    use_backend mongodb if mongo_uri
     default_backend website
     
 backend website
@@ -19,3 +21,6 @@ backend website
     
 backend logstash_app
     server logstash logstash:2000
+    
+backend mongodb
+    server database mongo:28017
