--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -7,7 +7,7 @@ input {
 
 filter {
     mutate {
-        add_field => { "ordered" => 1 }
+        add_field => { "ordered" => "true" }
         rename => { "message" => "name" }
     }
 }
@@ -16,6 +16,6 @@ output {
     mongodb {
         collection => "orders"
         database => "ordersDB"
-         uri => "mongodb://mongo.tty-training:27017"
+         uri => "mongodb://mongo:27017"
     }
 }
